2005-11-01  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* Repository: STLport 5.0.0, tag STLPORT_5_0_0

	* Repository: merge HEAD and STLPORT_5_0 branch.

	* build/Makefiles/gmake/app/rules-install.mak: install-shared rule
	added (patch by Michael Fink).

	* build/Makefiles/gmake/lib/rules-install-a.mak: install-static rule
	added (patch by Michael Fink).

2005-10-12  Francois Dumont  <dums@stlport...>

	* stlport/stl/_threads.h, _threads.c: Fix regression for some platforms
	introduce by modification of _Atomic_swap_ptr implementation thanks
	Albrecht Fritzche.

2005-10-09  Petr Ovtchenkov  <complement@users.sourceforge.net>

	* repository: RC6, tag STLPORT_5_0_RC6

2005-10-09  Francois Dumont  <dums@stlport...>

	* stlport/config/stl_gcc.h: DEC alpha has not *l math functions

2005-10-08  Francois Dumont  <dums@stlport...>

	* stlport/stl/_config.h: Add endianess specification for DEC alpha thanks
	sourceforge compiler farm.

	* stlport/config/stl_intel.h: Remove reference to _STLP_GLOBAL_NEW_HANDLER
	in this file as this macro depends on native Standard library which is
	the back end MSVC compiler one so macro set in stl_msvc.h.

2005-10-07  Francois Dumont  <dums@stlport...>

	* build/Makefiles/gmake/darwin/sys.mak, freebsd/sys.mak: Fix EXT_TEST
	definition to test rather than /usr/bin/test thanks sourceforge
	compiler farm.

2005-10-05  Francois Dumont  <dums@stlport...>

	* build/Makefiles/nmake/vc-common.mak: Remove /Fd option for the icl
	compiler that do not know it.

2005-10-04  Francois Dumont  <dums@stlport...>

	* stlport/stl/debug/_list.h: Fix resize method implementation in safe
	STL mode thanks Ethan Fenn report.

	* test/unit/list_test.cpp: Add test case for list::resize method.

	* build/Makefiles/nmake/lib/rules-install-a.mak, app/rules-install-a.mak:
	Install .pdb files only if exist, Intel C++ compiler do not generate them
	when building static libraries. Thanks Albrecht Fritzsche
