@@ -3,7 +3,7 @@
 STLport README for eMbedded Visual C++ 4
 ========================================
 
-by: Zdenek Nemec, zero@mapfactor.com, last edited 2005-05-30
+by: Zdenek Nemec, zero@mapfactor.com, last edited 2005-10-17
 
 ============
 Introduction
@@ -18,7 +18,7 @@ https://sourceforge.net/forum/?group_id=146814
 Prerequisites
 =============
 To build and use the STLport you will need following tools and libraries:
- - eMbedded Visual C++ 4.0 sp3
+ - eMbedded Visual C++ 4.0 SP4
  - Microsoft RTTI patch, to enable C++ exception handling, available at http://support.microsoft.com/default.aspx?scid=kb;[LN];830482
  - lastest CVS version of the STLport, use info from page 'http://stlport.sourceforge.net/CVS.shtml' to get it
 
@@ -33,8 +33,8 @@ NOTE: If you are using Microsoft's batch files to set system variables check if 
 WCEROOT=C:\Program Files\Microsoft eMbedded C++ 4.0
 SDKROOT=C:\Program Files\Windows CE Tools
 
-Third, when you are 100percent sure you've set correctly systems variables go to the STLport/src/explore dir and run the configure.bat with
-proper -c and option (ie. "-c evc4"),
+Third, when you are 100percent sure you've set correctly systems variables go to the STLport/build/lib dir and run the configure.bat with
+proper -c option (ie. "-c evc4"),
 then invoke following command: 'nmake /f nmake-evc4.mak install' to build the library.
 
 If anything goes wrong check if you met all prerequisities and if you set system vars accordingly to the makfile you are using.
