@@ -1,3 +1,12 @@
+2005-11-07  Michael Fink  <vividos@users.sourceforge...>
+
+	* build/Makefiles/nmake/evc3.mak, build/Makefiles/nmake/evc4.mak,
+	build/lib/configure.bat, stlport/config/stl_evc.h: Added check if
+	using x86 emulator configuration; using of proper include paths in
+	case.
+
+	* doc/README.evc4: Documentation update
+
 2005-11-01  Petr Ovtchenkov  <complement@users.sourceforge.net>
 
 	* Repository: STLport 5.0.0, tag STLPORT_5_0_0
